[gd_scene load_steps=6 format=3 uid="uid://c3d3mjtvbpmdc"]

[ext_resource type="Script" path="res://scripts/inventory/fantasy_seal_main.gd" id="1_ukoaf"]
[ext_resource type="Texture2D" uid="uid://dp0abrs78qgcv" path="res://sprites/items/item_spawnables/fantasy_seal.png" id="2_500qw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ollru"]
radius = 15.0

[sub_resource type="Animation" id="Animation_rhohn"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ieiq4"]
_data = {
"fade_out": SubResource("Animation_rhohn")
}

[node name="fantasy_seal_main" type="Node2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_ukoaf")
sprite = NodePath("main_body/main_body_2/sprite/FantasySeal")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]
scale = Vector2(1e-05, 1e-05)

[node name="sprite" type="Node2D" parent="main_body/main_body_2"]

[node name="FantasySeal" type="Sprite2D" parent="main_body/main_body_2/sprite"]
texture = ExtResource("2_500qw")

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("CircleShape2D_ollru")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ieiq4")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
